aswin change: fixed link alignment of nav

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,3 +1,7 @@
+#About-page{
+    scroll-margin-top:40px;
+}
+
 .about-container{
     padding: 30px 10%;
     margin: 40px auto;
